Added session chart

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -178,7 +178,7 @@ label.course                      = Curs:
 label.coursemodule                = M\u00F2duls del curs:
 label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
-label.downloadinglog              = S'est\u00E0 actualitzant el registre... (This process may take some time)
+label.downloadinglog              = Attempt {}/{}: S'est\u00E0 actualitzant el registre... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Data de refer\u00E8ncia final:
 label.enrolledusers               = # enrolled users
@@ -250,6 +250,8 @@ log.component.glossary                                          = Glossari
 log.component.grade_history                                     = Historial de qualificacions
 log.component.grader_report                                     = Informe del qualificador
 log.component.ims_content_package                               = Paquet de contingut IMS
+log.component.kaltura_media_assignment                          = Kaltura media assignment
+log.component.kaltura_video_resource                            = Kaltura video resource
 log.component.language_packs                                    = Paquets d'idioma
 log.component.lesson                                            = Lli\u00E7\u00F3
 log.component.live_logs                                         = Registres en directe
@@ -293,6 +295,7 @@ log.event.an_online_text_has_been_uploaded                      = S'ha pujat un 
 log.event.assessment_evaluated                                  = S'ha avaluat l'avaluaci\u00F3
 log.event.assessment_evaluations_reset                          = Reinicia l'avaluaci\u00F3 de l'avaluacions
 log.event.assessment_reevaluated                                = S'ha reavaluat l'avaluaci\u00F3
+log.event.assignment_details_viewed                             = Assignment details viewed
 log.event.assignment_override_created                           = Assignment override created
 log.event.assignment_override_deleted                           = Assignment override deleted
 log.event.assignment_override_updated                           = Assignment override updated
@@ -654,6 +657,7 @@ log.event.user_statistics_report_viewed                         = S'ha mostrat l
 log.event.user_unenrolled_from_course                           = Cancel\u00B7lada la inscripci\u00F3 de l'usuari al curs
 log.event.user_unenrolment_updated                              = Actualizada la cancel\u00B7laci\u00F3 d'inscripci\u00F3 de l'usuari
 log.event.user_updated                                          = Usuari actualitzat
+log.event.video_resource_viewed                                 = Video resource viewed
 log.event.web_service_created                                   = S'ha creat un servei del servei web
 log.event.web_service_deleted                                   = Servei del servei web suprimit
 log.event.web_service_function_called                           = S'ha cridat una funci\u00F3 del servei web
@@ -721,6 +725,7 @@ module.label       = Etiqueta
 module.lesson      = Lli\u00E7\u00F3
 module.lti         = Eina externa
 module.manual      = Element manual
+module.module      = Not avaible
 module.page        = P\u00E0gina
 module.quiz        = Q\u00FCestionari
 module.resource    = Dossier
