--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -178,7 +178,7 @@ label.course                      = Kurs:
 label.coursemodule                = Kursmodule:
 label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
-label.downloadinglog              = Protokoll wird aktualisiert ... (This process may take some time)
+label.downloadinglog              = Attempt {}/{}: Protokoll wird aktualisiert ... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Enddatum:
 label.enrolledusers               = # enrolled users
@@ -250,6 +250,8 @@ log.component.glossary                                          = Glossar
 log.component.grade_history                                     = Bewertungsverlauf
 log.component.grader_report                                     = Bewerter\u00FCbersicht
 log.component.ims_content_package                               = IMS-Content
+log.component.kaltura_media_assignment                          = Kaltura media assignment
+log.component.kaltura_video_resource                            = Kaltura video resource
 log.component.language_packs                                    = Sprachpakete
 log.component.lesson                                            = Lektion
 log.component.live_logs                                         = Live-Logdaten
@@ -293,6 +295,7 @@ log.event.an_online_text_has_been_uploaded                      = Onlinetext wur
 log.event.assessment_evaluated                                  = Beurteilung gepr\u00FCft
 log.event.assessment_evaluations_reset                          = Beurteilungspr\u00FCfung zur\u00FCckgesetzt
 log.event.assessment_reevaluated                                = Beurteilung neu gepr\u00FCft
+log.event.assignment_details_viewed                             = Assignment details viewed
 log.event.assignment_override_created                           = Verf\u00FCgbarkeits\u00E4nderung f\u00FCr Aufgaben angelegt
 log.event.assignment_override_deleted                           = Verf\u00FCgbarkeits\u00E4nderungen f\u00FCr Aufgaben gel\u00F6scht
 log.event.assignment_override_updated                           = Verf\u00FCgbarkeits\u00E4nderungen f\u00FCr Aufgaben bearbeitet
@@ -654,6 +657,7 @@ log.event.user_statistics_report_viewed                         = Nutzerstatisti
 log.event.user_unenrolled_from_course                           = Nutzer/in aus Kurs abgemeldet
 log.event.user_unenrolment_updated                              = Nutzereinschreibung aktualisiert
 log.event.user_updated                                          = Nutzerkonto aktualisiert
+log.event.video_resource_viewed                                 = Video resource viewed
 log.event.web_service_created                                   = Webservice-Dienst angelegt
 log.event.web_service_deleted                                   = Dienst f\u00FCr Webservice gel\u00F6scht
 log.event.web_service_function_called                           = Webservice-Funktion aufgerufen
@@ -721,6 +725,7 @@ module.label       = Etikette
 module.lesson      = Lektion
 module.lti         = Externes Werkzeug
 module.manual      = Manueller Artikel
+module.module      = Not avaible
 module.page        = Seite
 module.quiz        = Quiz
 module.resource    = Datei
