--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -178,7 +178,7 @@ label.course                      = Course:
 label.coursemodule                = Course module:
 label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
-label.downloadinglog              = Downloading log... (This process may take some time)
+label.downloadinglog              = Attempt {0}/{1}: Downloading log... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = End reference date: 
 label.enrolledusers               = # enrolled users
@@ -250,6 +250,8 @@ log.component.glossary                                          = Glossary
 log.component.grade_history                                     = Grade history
 log.component.grader_report                                     = Grader report
 log.component.ims_content_package                               = IMS content package
+log.component.kaltura_media_assignment                          = Kaltura media assignment
+log.component.kaltura_video_resource                            = Kaltura video resource
 log.component.language_packs                                    = Language packs
 log.component.lesson                                            = Lesson
 log.component.live_logs                                         = Live logs
@@ -293,6 +295,7 @@ log.event.an_online_text_has_been_uploaded                      = An online text
 log.event.assessment_evaluated                                  = Assessment evaluated
 log.event.assessment_evaluations_reset                          = Assessment evaluations reset
 log.event.assessment_reevaluated                                = Assessment re-evaluated
+log.event.assignment_details_viewed                             = Assignment details viewed
 log.event.assignment_override_created                           = Assignment override created
 log.event.assignment_override_deleted                           = Assignment override deleted
 log.event.assignment_override_updated                           = Assignment override updated
@@ -654,6 +657,7 @@ log.event.user_statistics_report_viewed                         = User statistic
 log.event.user_unenrolled_from_course                           = User unenrolled from course
 log.event.user_unenrolment_updated                              = User unenrolment updated
 log.event.user_updated                                          = User updated
+log.event.video_resource_viewed                                 = Video resource viewed
 log.event.web_service_created                                   = Web service created
 log.event.web_service_deleted                                   = Web service deleted
 log.event.web_service_function_called                           = Web service function called
@@ -721,6 +725,7 @@ module.label       = Label
 module.lesson      = Lesson
 module.lti         = External tool
 module.manual      = Manual item
+module.module      = Not avaible
 module.page        = Page
 module.quiz        = Quiz
 module.resource    = File
