--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -178,7 +178,7 @@ label.course                      = Curso:
 label.coursemodule                = M\u00F3dulos:
 label.coursemodules               = # m\u00F3dulos del curso
 label.courses                     = Cursos matriculados
-label.downloadinglog              = Descargando registros... (Este proceso puede tardar cierto tiempo)
+label.downloadinglog              = Intento {0}/{1}: Descargando registros... (Este proceso puede tardar cierto tiempo)
 label.email                       = Correo electr\u00F3nico
 label.enddate                     = Fecha de referencia final: 
 label.enrolledusers               = # usuarios matriculados
@@ -240,7 +240,7 @@ log.component.course_participation                              = Participaci\u0
 log.component.database                                          = Base de datos
 log.component.event_monitor                                     = Event monitor
 log.component.excel_spreadsheet                                 = Hoja de c\u00E1lculo Excel
-log.component.external_tool                                     = LTI
+log.component.external_tool                                     = Herramienta externa
 log.component.feedback                                          = M\u00F3dulo de encuesta
 log.component.file                                              = Recurso
 log.component.file_submissions                                  = Archivos enviados
@@ -250,6 +250,8 @@ log.component.glossary                                          = Glosario
 log.component.grade_history                                     = Historial de calificaci\u00F3n
 log.component.grader_report                                     = Informe del Calificador
 log.component.ims_content_package                               = Paquete de contenidos IMS
+log.component.kaltura_media_assignment                          = Entrega Kaltura media
+log.component.kaltura_video_resource                            = Recurso de video de Kaltura
 log.component.language_packs                                    = Paquetes de idioma
 log.component.lesson                                            = Lecci\u00F3n
 log.component.live_logs                                         = Registros activos
@@ -293,6 +295,7 @@ log.event.an_online_text_has_been_uploaded                      = Un texto en l\
 log.event.assessment_evaluated                                  = Calificaci\u00F3n evaluada
 log.event.assessment_evaluations_reset                          = Valoraciones de evaluaci\u00F3n restablecidas
 log.event.assessment_reevaluated                                = Valoraci\u00F3n evaluada de nuevo
+log.event.assignment_details_viewed                             = Detalles de la entrega vista
 log.event.assignment_override_created                           = Assignment override created
 log.event.assignment_override_deleted                           = Assignment override deleted
 log.event.assignment_override_updated                           = Assignment override updated
@@ -654,6 +657,7 @@ log.event.user_statistics_report_viewed                         = Informe de est
 log.event.user_unenrolled_from_course                           = Usuario matriculado en curso
 log.event.user_unenrolment_updated                              = Usuario matriculado en curso
 log.event.user_updated                                          = Usuario actualizado
+log.event.video_resource_viewed                                 = Recurso de video visto
 log.event.web_service_created                                   = El servicio del "web service" ha sido creado
 log.event.web_service_deleted                                   = El servicio del "web service" ha sido borrado
 log.event.web_service_function_called                           = Llamada a la funci\u00F3n del "web service"
@@ -721,6 +725,7 @@ module.label       = Etiqueta
 module.lesson      = Lecci\u00F3n
 module.lti         = Herramienta externa
 module.manual      = \u00CDtem manual
+module.module      = No disponible
 module.page        = P\u00E1gina
 module.quiz        = Cuestionario
 module.resource    = Archivo
