--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -178,7 +178,7 @@ label.course                      = Corso:
 label.coursemodule                = Moduli del corso:
 label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
-label.downloadinglog              = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
+label.downloadinglog              = Attempt {0}/{1}: Aggiornamento del registro ... (This process may take some time) (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Data di riferimento di fine:
 label.enrolledusers               = # enrolled users
@@ -250,6 +250,8 @@ log.component.glossary                                          = Glossario
 log.component.grade_history                                     = Storico delle valutazioni
 log.component.grader_report                                     = Registro valutatore
 log.component.ims_content_package                               = IMS Content Package
+log.component.kaltura_media_assignment                          = Kaltura media assignment
+log.component.kaltura_video_resource                            = Kaltura video resource
 log.component.language_packs                                    = Language pack
 log.component.lesson                                            = Lezione
 log.component.live_logs                                         = Live log
@@ -293,6 +295,7 @@ log.event.an_online_text_has_been_uploaded                      = Effettuata con
 log.event.assessment_evaluated                                  = Assegnati voti alla valutazione
 log.event.assessment_evaluations_reset                          = Reimpostati voti della valutazione
 log.event.assessment_reevaluated                                = Assegnati di nuovo voti alla valutazione
+log.event.assignment_details_viewed                             = Assignment details viewed
 log.event.assignment_override_created                           = Creata personalizzazione del compito
 log.event.assignment_override_deleted                           = Eliminata personalizzazione del compito
 log.event.assignment_override_updated                           = Aggiornata personalizzazione del compito
@@ -654,6 +657,7 @@ log.event.user_statistics_report_viewed                         = Visualizzato r
 log.event.user_unenrolled_from_course                           = Disiscritto utente dal corso
 log.event.user_unenrolment_updated                              = Aggiornata iscrizione utente
 log.event.user_updated                                          = Aggiornato utente
+log.event.video_resource_viewed                                 = Video resource viewed
 log.event.web_service_created                                   = Creato servizio web service
 log.event.web_service_deleted                                   = Eliminato servizio web service
 log.event.web_service_function_called                           = Chiamata funzione web service
@@ -721,6 +725,7 @@ module.label       = Etichetta
 module.lesson      = Lezione
 module.lti         = Strumento esterno
 module.manual      = Articolo manuale
+module.module      = Not avaible
 module.page        = Pagina
 module.quiz        = Quiz
 module.resource    = File
