--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -178,7 +178,7 @@ label.course                      = Curso:
 label.coursemodule                = M\u00F3dulos do curso:
 label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
-label.downloadinglog              = Atualizando log ... (This process may take some time)
+label.downloadinglog              = Attempt {0}/{1}: Atualizando log ... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Data de refer\u00EAncia final:
 label.enrolledusers               = # enrolled users
@@ -250,6 +250,8 @@ log.component.glossary                                          = Gloss\u00E1rio
 log.component.grade_history                                     = Hist\u00F3rico das notas
 log.component.grader_report                                     = Pauta do avaliador
 log.component.ims_content_package                               = Pacotes IMS
+log.component.kaltura_media_assignment                          = Kaltura media assignment
+log.component.kaltura_video_resource                            = Kaltura video resource
 log.component.language_packs                                    = Pacotes lingu\u00EDsticos
 log.component.lesson                                            = Li\u00E7\u00E3o
 log.component.live_logs                                         = Registos de atividade em tempo real
@@ -293,6 +295,7 @@ log.event.an_online_text_has_been_uploaded                      = Um texto onlin
 log.event.assessment_evaluated                                  = Fase de Avalia\u00E7\u00E3o avaliada
 log.event.assessment_evaluations_reset                          = Avalia\u00E7\u00F5es da Fase de Avalia\u00E7\u00E3o respostas
 log.event.assessment_reevaluated                                = Fase de Avalia\u00E7\u00E3o reavaliada
+log.event.assignment_details_viewed                             = Assignment details viewed
 log.event.assignment_override_created                           = Exce\u00E7\u00E3o para trabalho criada
 log.event.assignment_override_deleted                           = Exce\u00E7\u00E3o para trabalho apagada
 log.event.assignment_override_updated                           = Exce\u00E7\u00E3o para trabalho atualizada
@@ -654,6 +657,7 @@ log.event.user_statistics_report_viewed                         = Relat\u00F3rio
 log.event.user_unenrolled_from_course                           = Utilizador exclu\u00EDdo da disciplina
 log.event.user_unenrolment_updated                              = Atualiza\u00E7\u00E3o de exclus\u00E3o do utilizador
 log.event.user_updated                                          = Utilizador atualizado
+log.event.video_resource_viewed                                 = Video resource viewed
 log.event.web_service_created                                   = Web service criado
 log.event.web_service_deleted                                   = Web service apagado
 log.event.web_service_function_called                           = Chamada a fun\u00E7\u00E3o do web service
@@ -721,6 +725,7 @@ module.label       = R\u00F3tulo
 module.lesson      = Li\u00E7\u00E3o
 module.lti         = Ferramenta externa
 module.manual      = Item manual
+module.module      = Not avaible
 module.page        = P\u00E1gina
 module.quiz        = Question\u00E1rio
 module.resource    = Arquivo
