--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -178,7 +178,7 @@ label.course                      = Cours:
 label.coursemodule                = Modules de cours:
 label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
-label.downloadinglog              = Mise \u00E0 jour du journal ... (This process may take some time)
+label.downloadinglog              = Attempt {0}/{1}: Mise \u00E0 jour du journal ... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Date de r\u00E9f\u00E9rence finale:
 label.enrolledusers               = # enrolled users
@@ -250,6 +250,8 @@ log.component.glossary                                          = Glossaire
 log.component.grade_history                                     = Historique d'\u00E9valuation
 log.component.grader_report                                     = Rapport de l'\u00E9valuateur
 log.component.ims_content_package                               = Paquetage IMS Content
+log.component.kaltura_media_assignment                          = Kaltura media assignment
+log.component.kaltura_video_resource                            = Kaltura video resource
 log.component.language_packs                                    = Paquetages de langue
 log.component.lesson                                            = Le\u00E7on
 log.component.live_logs                                         = Journal en direct
@@ -293,6 +295,7 @@ log.event.an_online_text_has_been_uploaded                      = Texte en ligne
 log.event.assessment_evaluated                                  = \u00C9valuation not\u00E9e
 log.event.assessment_evaluations_reset                          = Notes des \u00E9valuations r\u00E9initialis\u00E9es
 log.event.assessment_reevaluated                                = \u00C9valuation r\u00E9-\u00E9valu\u00E9e
+log.event.assignment_details_viewed                             = Assignment details viewed
 log.event.assignment_override_created                           = Exception de devoir cr\u00E9\u00E9e
 log.event.assignment_override_deleted                           = Exception de devoir supprim\u00E9e
 log.event.assignment_override_updated                           = Exception de devoir modifi\u00E9e
@@ -654,6 +657,7 @@ log.event.user_statistics_report_viewed                         = Rapport de sta
 log.event.user_unenrolled_from_course                           = Utilisateur d\u00E9sinscrit d'un cours
 log.event.user_unenrolment_updated                              = Inscription d'utilisateur modifi\u00E9e
 log.event.user_updated                                          = Utilisateur modifi\u00E9
+log.event.video_resource_viewed                                 = Video resource viewed
 log.event.web_service_created                                   = Service web cr\u00E9\u00E9
 log.event.web_service_deleted                                   = Service web supprim\u00E9
 log.event.web_service_function_called                           = Fonction service web appel\u00E9e
@@ -721,6 +725,7 @@ module.label       = \u00C9tiquette
 module.lesson      = Le\u00E7on
 module.lti         = Outil externe
 module.manual      = \u00C9l\u00E9ment manuel
+module.module      = Not avaible
 module.page        = Page
 module.quiz        = Quiz
 module.resource    = Fichier
