--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -113,6 +113,22 @@ choiceBox.YEAR_MONTH   = Months
 choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
+clustering.cluster          = Cluster
+clustering.clusters         = Clusters
+clustering.distance         = Type of distance
+clustering.eps              = Maximum radius of the neighborhood
+clustering.execute          = Execute
+clustering.fullname         = Name
+clustering.fuzziness        = Fuzziness factor
+clustering.logsTypes        = Types of logs
+clustering.maxIterations    = Maximum number of iterations
+clustering.minPts           = Minimum points per cluster
+clustering.numTrials        = Number of trial
+clustering.numberOfClusters = Number of clusters
+clustering.reduce           = Reduce dimension
+clustering.rename           = Rename
+clustering.table            = Data table
+
 cutGrade = Grade to pass
 
 displayXScaleTitle = Title X-axis
@@ -737,6 +753,7 @@ passGradeColor = Passing grade color
 secondInterval = Second interval
 
 tab.activityCompletion = Activity Completion
+tab.clustering         = Clustering
 tab.component          = Components
 tab.coursemodule       = Course Modules
 tab.event              = Events
