--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -113,6 +113,22 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
+clustering.cluster          = Agrupaci\u00F3n
+clustering.clusters         = Agrupaciones
+clustering.distance         = Tipo de distancia
+clustering.eps              = Radio m\u00E1ximo de vecindad
+clustering.execute          = Ejecutar
+clustering.fullname         = Nombre
+clustering.fuzziness        = Factor de borrosidad
+clustering.logsTypes        = Tipos de registros
+clustering.maxIterations    = M\u00E1ximo n\u00FAmero de iteraciones
+clustering.minPts           = M\u00EDnimo de puntos por agrupaci\u00F3n
+clustering.numTrials        = N\u00FAmero de intentos
+clustering.numberOfClusters = N\u00FAmero de agrupaciones
+clustering.reduce           = Reducir dimensi\u00F3n
+clustering.rename           = Renombrar
+clustering.table            = Tabla de datos
+
 cutGrade = Nota de corte
 
 displayXScaleTitle = T\u00EDtulo del eje X
@@ -737,6 +753,7 @@ passGradeColor = Color de calificaci\u00F3n aprobada
 secondInterval = Segundo intervalo
 
 tab.activityCompletion = Finalizaci\u00F3n Actividad
+tab.clustering         = Clustering
 tab.component          = Componentes
 tab.coursemodule       = M\u00F3dulos curso
 tab.event              = Eventos
