--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -737,6 +737,7 @@ passGradeColor = Passando cor grau
 secondInterval = Segundo intervalo
 
 tab.activityCompletion = Conclus\u00E3o das atividades
+tab.clustering         = Clustering
 tab.component          = Componentes
 tab.coursemodule       = M\u00F3dulos do curso
 tab.event              = Eventos
