--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -737,6 +737,7 @@ passGradeColor = En passant la couleur de qualit\u00E9
 secondInterval = deuxi\u00E8me intervalle
 
 tab.activityCompletion = Ach\u00E8vement d'activit\u00E9s
+tab.clustering         = Clustering
 tab.component          = Composants
 tab.coursemodule       = Modules de cours
 tab.event              = \u00C9v\u00E9nements
