Modified session chart

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -40,6 +40,9 @@ RADAR = Radar
 
 SCATTER = Dispersi\u00F3n
 
+SESSION.xAxisTitle = {0}
+SESSION.yAxisTitle = Minutos (l\u00EDmite intervalo: {0})
+
 STACKED_BAR = Barras Apiladas
 
 STACKED_BAR.xAxisTitle = {0}
@@ -785,6 +788,7 @@ text.sectionplaceholder = P\u00E1gina principal
 text.see                = Ver 
 text.selectall          = Seleccionar/Deseleccionar todos
 text.selectedUsers      = Usuarios seleccionados
+text.session            = N\u00BA de sesiones: 
 text.stats              = Estad\u00EDsticas
 text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
 text.thankstitle        = Agradecimientos:
