--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -40,6 +40,9 @@ RADAR = Radar
 
 SCATTER = Scatter
 
+SESSION.xAxisTitle = {0}
+SESSION.yAxisTitle = Minutes (interval limit: {0})
+
 STACKED_BAR = A Barre In Pila
 
 STACKED_BAR.xAxisTitle = {0}
@@ -785,6 +788,7 @@ text.sectionplaceholder = Prima pagina
 text.see                = See 
 text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected users
+text.session            = # of sessions: 
 text.stats              = Statistiche
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
