Mensajes de error #36

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -117,6 +117,7 @@ clustering.cluster          = Cluster
 clustering.clusters         = Clusters
 clustering.distance         = Type of distance
 clustering.eps              = Maximum radius of the neighborhood
+clustering.error.parameter  = Invalid field [{0}] ({1}), must be greater than {2}.
 clustering.execute          = Execute
 clustering.fullname         = Name
 clustering.fuzziness        = Fuzziness factor
