--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -117,6 +117,7 @@ clustering.cluster          = Agrupaci\u00F3n
 clustering.clusters         = Agrupaciones
 clustering.distance         = Tipo de distancia
 clustering.eps              = Radio m\u00E1ximo de vecindad
+clustering.error.parameter  = Campo inv\u00E1lido [{0}] ({1}), debe ser mayor que {2}.
 clustering.execute          = Ejecutar
 clustering.fullname         = Nombre
 clustering.fuzziness        = Factor de borrosidad
