Mensajes de error y cambios menores #36

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -113,22 +113,25 @@ choiceBox.YEAR_MONTH   = Months
 choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
-clustering.cluster          = Cluster
-clustering.clusters         = Clusters
-clustering.distance         = Type of distance
-clustering.eps              = Maximum radius of the neighborhood
-clustering.error.parameter  = Invalid field [{0}] ({1}), must be greater than {2}.
-clustering.execute          = Execute
-clustering.fullname         = Name
-clustering.fuzziness        = Fuzziness factor
-clustering.logsTypes        = Types of logs
-clustering.maxIterations    = Maximum number of iterations
-clustering.minPts           = Minimum points per cluster
-clustering.numTrials        = Number of trial
-clustering.numberOfClusters = Number of clusters
-clustering.reduce           = Reduce dimension
-clustering.rename           = Rename
-clustering.table            = Data table
+clustering.cluster                     = Cluster
+clustering.clusters                    = Clusters
+clustering.distance                    = Type of distance
+clustering.eps                         = Maximum radius of the neighborhood
+clustering.error.lessUsersThanClusters = Fewer selected users than clusters
+clustering.error.notData               = No data selected
+clustering.error.notUsers              = No users selected
+clustering.error.parameter             = Invalid field [{0}] ({1}), must be greater than {2}.
+clustering.execute                     = Execute
+clustering.fullname                    = Name
+clustering.fuzziness                   = Fuzziness factor
+clustering.logsTypes                   = Types of logs
+clustering.maxIterations               = Maximum number of iterations
+clustering.minPts                      = Minimum points per cluster
+clustering.numTrials                   = Number of trial
+clustering.numberOfClusters            = Number of clusters
+clustering.reduce                      = Reduce dimension
+clustering.rename                      = Rename
+clustering.table                       = Data table
 
 cutGrade = Grade to pass
 
