--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -113,22 +113,25 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
-clustering.cluster          = Agrupaci\u00F3n
-clustering.clusters         = Agrupaciones
-clustering.distance         = Tipo de distancia
-clustering.eps              = Radio m\u00E1ximo de vecindad
-clustering.error.parameter  = Campo inv\u00E1lido [{0}] ({1}), debe ser mayor que {2}.
-clustering.execute          = Ejecutar
-clustering.fullname         = Nombre
-clustering.fuzziness        = Factor de borrosidad
-clustering.logsTypes        = Tipos de registros
-clustering.maxIterations    = M\u00E1ximo n\u00FAmero de iteraciones
-clustering.minPts           = M\u00EDnimo de puntos por agrupaci\u00F3n
-clustering.numTrials        = N\u00FAmero de intentos
-clustering.numberOfClusters = N\u00FAmero de agrupaciones
-clustering.reduce           = Reducir dimensi\u00F3n
-clustering.rename           = Renombrar
-clustering.table            = Tabla de datos
+clustering.cluster                     = Agrupaci\u00F3n
+clustering.clusters                    = Agrupaciones
+clustering.distance                    = Tipo de distancia
+clustering.eps                         = Radio m\u00E1ximo de vecindad
+clustering.error.lessUsersThanClusters = Menos usuarios seleccionados que agrupaciones
+clustering.error.notData               = No hay datos seleccionados
+clustering.error.notUsers              = No hay usuarios seleccionados
+clustering.error.parameter             = Campo inv\u00E1lido [{0}] ({1}), debe ser mayor que {2}.
+clustering.execute                     = Ejecutar
+clustering.fullname                    = Nombre
+clustering.fuzziness                   = Factor de borrosidad
+clustering.logsTypes                   = Tipos de registros
+clustering.maxIterations               = M\u00E1ximo n\u00FAmero de iteraciones
+clustering.minPts                      = M\u00EDnimo de puntos por agrupaci\u00F3n
+clustering.numTrials                   = N\u00FAmero de intentos
+clustering.numberOfClusters            = N\u00FAmero de agrupaciones
+clustering.reduce                      = Reducir dimensi\u00F3n
+clustering.rename                      = Renombrar
+clustering.table                       = Tabla de datos
 
 cutGrade = Nota de corte
 
