--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -139,6 +139,7 @@ error.savechart           = Error en desar el diagrama.
 error.saveconfiguration   = Cannot save the configuration file.
 error.savecsvfiles        = No s'han pogut exportar les dades en format CSV.
 error.updateofflinemode   = El curs no es pot actualitzar en mode fora de l\u00EDnia. Si us plau, sortir i entrar de nou en la manera en l\u00EDnia.
+error.user                = Error when retrieving user data.
 error.userdata            = Error en recuperar les dades de l'usuari.
 
 failGradeColor = A falta de color de grau
