--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -139,6 +139,7 @@ error.savechart           = Fehler beim Speichern des Diagramms.
 error.saveconfiguration   = Cannot save the configuration file.
 error.savecsvfiles        = Die Daten konnten nicht im CSV-Format exportiert werden.
 error.updateofflinemode   = Der Kurs kann nicht im Offline-Modus aktualisiert werden. Bitte melden Sie sich ab und melden Sie sich im Online-Modus zur\u00FCck.
+error.user                = Error when retrieving user data.
 error.userdata            = Fehler beim Wiederherstellen der Benutzerdaten.
 
 failGradeColor = Failing Grade Farbe
