--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -139,6 +139,7 @@ error.savechart           = Error al gruardar el gr\u00E1fico.
 error.saveconfiguration   = No se ha podido guardar el fichero de configuraci\u00F3n.
 error.savecsvfiles        = No se han podido exportar los datos en formato CSV.
 error.updateofflinemode   = No se puede actualizar el curso en modo offline. Por favor, cierre sesi\u00F3n y vuelva a iniciar sesi\u00F3n en modo online
+error.user                = Error al recuperar los datos del usuario.
 error.userdata            = Error al recuperar los datos del usuario.
 
 failGradeColor = Color de calificaci\u00F3n suspensa
