--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -139,6 +139,7 @@ error.savechart           = Erreur d'enregistrement du graphique.
 error.saveconfiguration   = Cannot save the configuration file.
 error.savecsvfiles        = Les donn\u00E9es n'ont pas pu \u00EAtre export\u00E9es au format CSV.
 error.updateofflinemode   = Le cours ne peut pas \u00EAtre mis \u00E0 jour en mode hors ligne. S'il vous pla\u00EEt vous d\u00E9connecter et vous reconnecter en mode en ligne.
+error.user                = Error when retrieving user data.
 error.userdata            = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
 
 failGradeColor = couleur de qualit\u00E9 \u00E0 d\u00E9faut
