--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -139,6 +139,7 @@ error.savechart           = Errore durante il salvataggio del grafico.
 error.saveconfiguration   = Cannot save the configuration file.
 error.savecsvfiles        = I dati non possono essere esportati in formato CSV.
 error.updateofflinemode   = Il corso non pu\u00F2 essere aggiornato in modalit\u00E0 offline. Si prega di disconnettersi e riconnettersi in modalit\u00E0 online.
+error.user                = Error when retrieving user data.
 error.userdata            = Errore durante il recupero dei dati dell'utente.
 
 failGradeColor = In mancanza di colore di grado
