--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -139,6 +139,7 @@ error.savechart           = Erro ao salvar gr\u00E1fico.
 error.saveconfiguration   = Cannot save the configuration file.
 error.savecsvfiles        = Os dados n\u00E3o puderam ser exportados no formato CSV.
 error.updateofflinemode   = O curso n\u00E3o pode ser atualizado no modo offline. Por favor, saia e entre novamente no modo online.
+error.user                = Error when retrieving user data.
 error.userdata            = Erro ao recuperar dados do usu\u00E1rio.
 
 failGradeColor = Falhando cor grau
