--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -139,6 +139,7 @@ error.savechart           = Error saving chart.
 error.saveconfiguration   = Cannot save the configuration file.
 error.savecsvfiles        = The data could not be exported in CSV format.
 error.updateofflinemode   = The course cannot be updated in offline mode. Please log out and log back in online mode.
+error.user                = Error when retrieving user data.
 error.userdata            = Error when recovering user data.
 
 failGradeColor = Failing grade color
